--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -128,17 +128,47 @@
     justify-content: space-around;
     display: flex;
     float: none;
+    height: 300px;
 }
-.myhoroscopelist{
-  padding: 50px;
+
+.myhoroscopedetails{
+  text-align: left;
+  width: 700px;
+  border-radius: 15px;
+  background-color:white;
+  padding: 40px;
 }
+.mylistitem{
+  margin: 5px;
+  border-radius: 5px;
+  width: 115px;
+  height: 110px;
+  transition: 0.3s;
+  background-color: white;
+  color: black;
+}
+.mylistitem:hover{
+  background-color: black;
+  color: white;
+}
+.mylogo{
+  padding-left: 70px;
+  padding-right: 70px;
+}
+.myimage{
+  border-radius: 10px;
+}
+.mybackpage{
+  height: 1000px;
+}
+
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Daily Horoscope</a>
+          <a class="mylogo navbar-brand" href="/">Daily Horoscope</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="/horoscope">Zodiac Signs</a></li>
